--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,12 @@
     ],
     "require": {
         "guzzlehttp/guzzle": "4.0.*",
-        "react/http-client": ">=0.3.0"
+        "react/react": ">=0.3.0"
     },
     "require-dev": {
         "satooshi/php-coveralls": "~0.6",
-        "phpunit/phpunit": "4.0.*"
+        "phpunit/phpunit": "4.0.*",
+        "mockery/mockery": "0.9.0"
     },
     "autoload": {
         "psr-4": {
