--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "require": {
         "guzzlehttp/guzzle": "4.0.*",
-        "react/react": ">=0.3.0"
+        "react/http-client": ">=0.3.0,<0.5.0"
     },
     "require-dev": {
         "satooshi/php-coveralls": "~0.6",
