--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
     },
     "require-dev": {
         "satooshi/php-coveralls": "~0.6",
-        "phpunit/phpunit": "4.0.*",
-        "mockery/mockery": "0.9.0"
+        "phpunit/phpunit": "~4.0",
+        "mockery/mockery": "~0.9"
     },
     "autoload": {
         "psr-4": {
