Moved test are only included in the autoloader on --dev

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,11 @@
     },
     "autoload": {
         "psr-4": {
-            "WyriHaximus\\React\\Guzzle\\": "src/",
+            "WyriHaximus\\React\\Guzzle\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
             "WyriHaximus\\React\\Tests\\Guzzle\\": "tests/"
         }
     }
