--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "guzzlehttp/guzzle": "4.0.*",
-        "react/http-client": ">=0.3.0,<0.5.0"
+        "react/http-client": "0.4.*"
     },
     "require-dev": {
         "satooshi/php-coveralls": "~0.6",
