--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "guzzlehttp/guzzle": "4.0.*",
+        "guzzlehttp/guzzle": "~4.0",
         "react/http-client": "0.4.*"
     },
     "require-dev": {
