Added Phake to replace mockery

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "require-dev": {
         "satooshi/php-coveralls": "~0.6",
         "phpunit/phpunit": "~4.0",
-        "mockery/mockery": "~0.9"
+        "mockery/mockery": "~0.9",
+        "phake/phake": "1.0.*"
     },
     "suggest": {
         "guzzlehttp/oauth-subscriber": "0.1.* needed for oauth example"
