--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,7 @@ before_script:
   - if [ -z "$dependencies" ]; then composer install; fi;
   - if [ "$dependencies" = "lowest" ]; then composer update --prefer-lowest -n; fi;
   - if [ "$dependencies" = "highest" ]; then composer update -n; fi;
+  - composer show -i
 
 ## Run the actual test
 script: php vendor/bin/phpunit --coverage-text --coverage-clover ./build/logs/clover.xml
