--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,9 @@ before_script:
   - composer self-update
   - composer install
 
-script: php vendor/bin/phpunit --coverage-text --coverage-clover ./build/logs/clover.xml
+script: make travis
+
+after_script: make travis-coverage
 
 notifications:
   webhooks:
@@ -24,5 +26,3 @@ notifications:
     on_success: always
     on_failure: always
     on_start: true
-
-after_script: sh -c " if [ -f ./build/logs/clover.xml ]; then php vendor/bin/coveralls; fi"
