--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "guzzlehttp/guzzle": "~4.0",
         "react/http-client": "0.4.*",
-        "wyrihaximus/react-guzzle-http-client": "dev-master"
+        "wyrihaximus/react-guzzle-http-client": "^3.0.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
