--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,10 @@
     ],
     "require": {
         "guzzlehttp/guzzle": "~4.0",
-        "react/http-client": "0.4.*",
-        "wyrihaximus/react-guzzle-http-client": "^3.0.0"
+        "react/http-client": "^0.4.0",
+        "react/dns": "^0.4.1",
+        "wyrihaximus/react-guzzle-http-client": "^3.0.0",
+        "guzzlehttp/psr7": "^1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
