--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         }
     ],
     "require": {
+        "php": "^5.4|^7.0",
         "guzzlehttp/guzzle": "~4.0",
         "react/http-client": "^0.4.0",
         "react/dns": "^0.4.1",
